<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BuyActivity"
    android:orientation="vertical"
    android:padding="10dp"
    tools:ignore="Autofill">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:labelFor="@id/buy_name"/>
    <EditText
        android:id="@+id/buy_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"
        android:labelFor="@id/buy_address"/>
    <EditText
        android:id="@+id/buy_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:labelFor="@id/buy_email"/>
    <EditText
        android:id="@+id/buy_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/and_or"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="20sp"
        android:labelFor="@id/buy_phone"/>
    <EditText
        android:id="@+id/buy_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>