<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="30dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"

            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp"
            android:paddingBottom="30dp"
            />
        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textAlignment="center"
            android:layout_below="@id/welcome_text"
            android:inputType="text"
            android:autofillHints="username"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAlignment="center"
            android:layout_below="@id/login_username"
            android:inputType="textPassword"
            android:autofillHints="password"/>
        <CheckBox
            android:id="@+id/login_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password"
            android:text="@string/remember_me"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/login_check">
            <Button
                android:id="@+id/login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/log_in"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:layout_margin="5dp"
                />
        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>